# the-tree-backend

./: main.py  pyproject.toml
src/thetree/: __init__.py
src/thetree/adapters/: __init__.py
src/thetree/adapters/email/: __init__.py
src/thetree/adapters/messaging/: __init__.py
src/thetree/adapters/persistence/: __init__.py
src/thetree/application/: __init__.py
src/thetree/application/budget/: __init__.py
src/thetree/application/common/: __init__.py
src/thetree/application/users/: __init__.py
src/thetree/core/: __init__.py
src/thetree/domain/: __init__.py
src/thetree/domain/budget/: __init__.py  account.py  budget.py  category.py  currency.py  flow.py  money.py  payee.py  supercategory.py
src/thetree/domain/common/: __init__.py
src/thetree/domain/users/: __init__.py  user.py
src/thetree/infrastructure/: __init__.py
src/thetree/infrastructure/cache/: __init__.py
src/thetree/infrastructure/db/: __init__.py
src/thetree/infrastructure/external_http/: __init__.py
src/thetree/infrastructure/messaging/: __init__.py
src/thetree/infrastructure/tasks/: __init__.py
src/thetree/interfaces/: __init__.py
src/thetree/interfaces/http/: __init__.py
src/thetree/interfaces/http/schemas/: __init__.py
src/thetree/interfaces/openapi/: __init__.py
src/thetree/presentation/: __init__.py
src/thetree/presentation/routers/: __init__.py
src/thetree/scripts/: __init__.py
tests/: __init__.py
tests/e2e/: __init__.py
tests/unit/: __init__.py
tests/unit/adapters/: __init__.py
tests/unit/application/: __init__.py
tests/unit/domain/: __init__.py
(+2 files in other folders)
