[project]
name = "thetree"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.1",
    "asyncpg>=0.30.0",
    "fastapi>=0.121.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.11.0",
    "sqlalchemy>=2.0.44",
    "uvicorn[standard]>=0.38.0",
]


[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

# Tell Hatchling to package from src/
[tool.hatch.build.targets.wheel]
packages = ["src/thetree"]

[dependency-groups]
dev = [
    "ipython>=9.7.0",
    "pytest>=9.0.0",
]

# (optional) CLI entry point
[project.scripts]
the-tree-backend-api = "the_tree_backend.__main__:main"
